# JurisNet

./: .env.example  .gitignore  PIPELINE_STAGES.md  PROJECT_MEMORY.md  README.md  RESEARCH_GraphRAG_Search_Agents.md  STATUS.md  app.py  chunker.py  config.py  demo_checklist.py  graph_ranker.py  legal_fts5.py  llm_keys.py  main.py  package-lock.json  pyproject.toml  query_embedder.py  requirements.txt  run_pipeline.py  server.py  test_neo4j.py  test_qdrant.py
Orders_Rules/: Order_1.json  Order_10.json  Order_100.json  Order_1000.json  Order_102.json  Order_10_Rule_1.json  Order_10_Rule_3.json  Order_11.json  Order_110.json  Order_110_Rule_1.json  Order_110_Rule_10.json  Order_110_Rule_12.json  Order_110_Rule_23.json  Order_110_Rule_25.json  Order_110_Rule_7.json  Order_110_Rule_9.json  Order_11_Rule_18.json  Order_11_Rule_2.json  Order_11_Rule_21.json  Order_11_Rule_4.json  Order_11_Rule_7.json  Order_12.json  Order_12_Rule_1.json  Order_12_Rule_6.json  Order_13.json  Order_13_Rule_1.json  Order_13_Rule_2.json  Order_13_Rule_3.json  Order_13_Rule_4.json  Order_13_Rule_9.json  Order_14.json  Order_14_Rule_1.json  Order_14_Rule_2.json  Order_14_Rule_24.json  Order_14_Rule_4.json  Order_14_Rule_5.json  Order_14_Rule_8.json  Order_15.json  Order_15_Rule_1.json  Order_15_Rule_3.json  (+291 more)
agents/: __init__.py  adjudicator.py  auditor.py  checklist_resolver.py  citation_verifier.py  graph.py  llm.py  llm_factory.py  query_agent.py  query_understanding.py  researcher.py  schemas.py  synthesis.py
deck/: 01_content_prompt.md  02_screenshots.md  03_diagrams.md  RESULTS.md  (+3 more)
(+823 files in other folders)
